# digital_coop_bank

./: .gitignore  CLAUDE.md
.softhouse/: baseline.txt  (+6 more)
backend/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: config.py  main.py  money.py
backend/app/api/: __init__.py  deps.py
backend/app/db/: base.py  check_migration.py  check_models.py  session.py  types.py
backend/app/models/: __init__.py  admin.py  cards.py  compliance.py  deposits.py  dividends.py  funding.py  governance.py  identity.py  ledger.py  lending.py  membership.py  notifications.py  payments.py  roundups.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/openapi/: openapi.yaml  root.yaml  validate.py
backend/openapi/params/: ep4-payments.yaml  ep5-cards.yaml
backend/openapi/paths/: ep1-identity.yaml  ep10-roundups.yaml  ep11-notifications.yaml  ep12-admin-dividends-funding.yaml  ep12-admin.yaml  ep13-compliance.yaml  ep2-shares.yaml  ep3-accounts.yaml  ep4-payments.yaml  ep5-cards.yaml  ep6-lending.yaml  ep7-dividends.yaml  ep8-governance.yaml  ep9-funding.yaml  webhooks.yaml
backend/openapi/schemas/: ep1-identity.yaml  ep10-roundups.yaml  ep11-notifications.yaml  ep12-admin-dividends-funding.yaml  ep12-admin.yaml  ep13-compliance.yaml  ep2-shares.yaml  ep3-accounts.yaml  ep4-payments.yaml  ep5-cards.yaml  ep6-lending.yaml  ep7-dividends.yaml  ep8-governance.yaml  ep9-funding.yaml  webhooks.yaml
backend/tests/: test_db_schema.py  test_health.py  test_migration_matches_models.py  test_money.py  test_ready.py
(+86 files in other folders)
